styles: reposition divs

--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -72,7 +72,7 @@
           padding: 0.35rem 1rem;
           border-radius: 25px;
           font-size: 0.85rem;
-          cursor: pointer;
+          cursor: default;
       }
       @media screen  and (max-width: 800px) {
           div {
