--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -21,31 +21,56 @@
       align-items: center;
       position: relative;
 
-      h3 {
-          color: #fff;
-          font-size: 2rem;
-          @media screen and (max-width: 500px) {
-              font-size: 1.5rem;
-          }
-          span {
-              background-clip: text;
-              -webkit-background-clip: text;
-              color: transparent;
-              background-image: linear-gradient(90deg, rgba(128,16,220,1) 20%, rgb(39, 145, 202) 100%);
-              
-          }
+      .test{
+        display: flex;
+        width: auto;
+        height: auto;
       }
+
       .job {
           color: #fff;
           opacity: 0.5;
           font-size: 0.85rem;
       }
+      .name{
+        display: flex;
+        font-size: 2rem;
+        @media screen and (max-width: 500px) {
+          font-size: 1.5rem;
+        }
+      }
+      .Typewriter{
+        display: flex;
+        padding: 0;
+        font-size: 2rem;
+        padding-left:0.5rem;
+        background-clip: text;
+        -webkit-background-clip: text;
+        color: transparent;
+        background-image: linear-gradient(90deg, rgba(128,16,220,1) 20%, rgb(39, 145, 202) 100%);
+        @media screen and (max-width: 500px) {
+          font-size: 1.5rem;
+        }
+      }
       .text {
-          margin-top: 3rem;
+          padding-top: 3rem;
           color: #fff;
           text-align: center;
           font-size: 4rem;
           line-height: 1.3;
+
+          .web {
+            position: absolute;
+            right: 5rem;
+            top: 3.5rem;
+            background: rgba(255,255,255,0.15)
+          }
+          .fullstack {
+              position: absolute;
+              top: 3.5rem;
+              left: 5rem;
+              background: rgba(255,255,255,0.15)
+          }
 
           @media screen and (max-width: 800px) {
               font-size: 3.5rem;
@@ -66,8 +91,7 @@
                   text-transform: capitalize;
               }
       div{
-          position: absolute;
-          background: rgba(255,255,255,0.15);
+          // background: rgba(255,255,255,0.15);
           color: #fff;
           padding: 0.35rem 1rem;
           border-radius: 25px;
@@ -79,14 +103,7 @@
               display: none;
           }
       }
-      .web {
-          right: 5rem;
-          top: 3.5rem;
-      }
-      .fullstack {
-          top: 3.5rem;
-          left: 5rem;
-      }
+      
   }
 
 }
