--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -24,9 +24,11 @@
   }
   .about_right {
       color: #fff;
-      padding: 1rem;
+      padding: 2rem;
       display: flex;
       flex-direction: column;
+      border-radius: 1rem;
+      background: rgba(255,255,255,0.15);
 
       @media screen and (max-width: 700px) {
           padding: 0;
@@ -34,8 +36,10 @@
       }
       
       p {
-          font-size: 0.85rem;
-          margin-bottom: 1rem;max-width: 450px;
+          font-size: 1.2rem;
+          font-weight: 400;
+          margin-bottom: 1rem;
+          max-width: 450px;
       }
       .bio {
           display: flex;
