--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -27,6 +27,7 @@
   .workImages {
       margin-top: 5rem;
       display: grid;
+      justify-items: center;
       grid-template-columns: repeat(3,1fr);
       gap: 2rem;
       
