--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -4,21 +4,25 @@
   place-items: center;
   position: relative;
 
-  @media screen and (max-width: 700px) {
+  @media screen and (max-width: 720px) {
       grid-template-columns: 1fr;
   }
 
   .about_left {
-      
+      display:flex;
       max-width: 450px;
       height: 450px;
-      justify-self: center;
+      justify-content: center;
       border-radius: 50%;
 
       img {
           object-fit: cover;
           width: 100%;
           height: 100%;
+          @media screen and (max-width: 920px) {
+            width: 90%;
+            height: 90%;
+        }
       }
       
   }
@@ -31,7 +35,7 @@
       background: rgba(255,255,255,0.15);
 
       @media screen and (max-width: 700px) {
-          padding: 0;
+          padding: auto;
           margin-top: 2rem;
       }
       
